# Vidst

./: .cursorrules  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CLAUDE-PERPLEXITY-README.md  README.md  backup_code.sh  chats.db  check-claude-perplexity-mcp.sh  coverage.xml  current_structure.txt  dependency-updates.md  direct-commands.txt  issue_109_comment.md  issue_109_remaining_tasks.md  mkdocs.yml  perplexity-direct.sh  perplexity-jsonrpc.sh  perplexity-mcp-wrapper.sh  perplexity-venv.sh  perplexity_mcp_launcher.sh  pr_template.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run-perplexity-alt.sh  run-perplexity-npx.sh  run-perplexity.sh  setup-claude-perplexity-mcp.sh  setup.cfg  setup.py  task3_summary.md  task4_summary.md  test_priorities.csv  test_results.md  test_service_interfaces.py  (+1 more)
.cursor/: project_board_state.json
.cursor/rules/: api_integration_rules.md  api_integration_testing.md  component_api_integration.md  component_base_patterns.md  component_factory_patterns.md  component_implementation.md  cursor_rule_index.md  documentation_rules.md  enhanced_workflow_commands.md  general_refactor_rules.md  git_basics.md  git_pr_workflow.md  git_workflow.md  github_api_integration.md  poc_scope_guidelines.md  project_management.md  project_navigation.md  simplified_api_integration.md  simplified_component_structure.md  simplified_testing_approach.md  simplified_video_understanding.md  testing_strategy.md  unit_testing.md  video_understanding.md  workflow_commands.md
.github/: dependabot.yml  labels.yml  pull_request_template.md
.github/workflows/: ci.yml  scope-creep-detection.yml
backups/: git_changes_20250228_095822.patch  untracked_files_list_20250228_095832.txt
benchmarks/: test_performance.py
docs/: README.md  README.rst  api.rst  api.rst.bak  ci-cd.md  ci-cd.rst  conftest.py  index.md  index.rst  issues-and-resolutions.rst  package_compatibility.md  project_board_automation.rst  project_board_automation.rst.bak  requirements-test.txt  setup.md  testing-guide.md  testing.md  testing.rst.bak
docs/_autosummary/: src.ai.models.base.ABC.rst  src.ai.models.base.ABC.rst.bak  src.ai.models.base.Any.rst  src.ai.models.base.Any.rst.bak  src.ai.models.base.BaseModel.rst  src.ai.models.base.BaseModel.rst.bak  src.ai.models.base.ModelError.rst  src.ai.models.base.ModelError.rst.bak  src.ai.models.base.TypeVar.rst  src.ai.models.base.TypeVar.rst.bak  src.ai.models.base.abstractmethod.rst  src.ai.models.base.abstractmethod.rst.bak  src.ai.models.base.rst  src.ai.models.base.rst.bak  src.ai.models.gemini.Any.rst  src.ai.models.gemini.Any.rst.bak  src.ai.models.gemini.BaseModel.rst  src.ai.models.gemini.BaseModel.rst.bak  src.ai.models.gemini.GeminiModel.rst  src.ai.models.gemini.GeminiModel.rst.bak  src.ai.models.gemini.ModelError.rst  src.ai.models.gemini.ModelError.rst.bak  src.ai.models.gemini.Path.rst  src.ai.models.gemini.Path.rst.bak  src.ai.models.gemini.rst  src.ai.models.gemini.rst.bak  src.ai.models.gpt4v.Any.rst  src.ai.models.gpt4v.Any.rst.bak  src.ai.models.gpt4v.BaseModel.rst  src.ai.models.gpt4v.BaseModel.rst.bak  src.ai.models.gpt4v.GPT4VisionModel.rst  src.ai.models.gpt4v.GPT4VisionModel.rst.bak  src.ai.models.gpt4v.ModelError.rst  src.ai.models.gpt4v.ModelError.rst.bak  src.ai.models.gpt4v.Path.rst  src.ai.models.gpt4v.Path.rst.bak  src.ai.models.gpt4v.rst  src.ai.models.gpt4v.rst.bak  src.ai.models.rst  src.ai.models.rst.bak  (+351 more)
docs/_ext/: accessibility.py
docs/_static/: custom.css
docs/api/: cache.md  config.md  detection.rst  error_handling.md  index.md  index.rst  ocr.rst  ocr_service.md  pipeline.md  processor.rst  reference.rst  scene.rst  scene_detection_service.md  services.md  services_summary.md  transcription_service.md  vector_storage.md  vector_storage.rst  vector_storage_service.md  video_upload.md
docs/api_reference/: index.rst
docs/architecture/: system_overview.md
docs/components/: audio_transcription.md  ocr.md  scene_detection.md  status_dashboard.md
docs/development/: ci-cd.rst  ci-cd.rst.bak  code-style.rst.bak  contributing.rst  documentation_guide.rst  project_board_automation.rst  test_completion_guide.rst.bak  test_suite.rst.bak
docs/getting_started/: installation.md  quickstart.md  setup.md
docs/guides/: api-integration.rst  async-testing.rst  caching.rst  configuration.rst.bak  error-handling.rst  error-handling.rst.bak  getting_started.rst  getting_started.rst.bak  index.rst  installation.rst  installation.rst.bak  quickstart.rst.bak  vector-storage.rst.bak  video-processing.md  video-processing.rst.bak  video-upload.rst.bak
docs/project_updates/: index.rst.bak
docs/scripts/: fix_cross_references.py  fix_docstrings.py  update_docs.sh  validate_docs.py
docs/tools/: fix_docs.py  generate_stubs.py
docs/troubleshooting/: common-issues.md
docs_archive_sphinx/: Makefile  README.md  conf.py
docs_archive_sphinx/_ext/: mock_modules.py
docs_archive_sphinx/_static/: custom.js  scorer.js
docs_archive_sphinx/_templates/: class.rst.bak  heading.html  layout.html  module.rst  page.html
docs_archive_sphinx/rst_files/: README.md  setup.rst
refactor/: README.md
refactor/01_analysis/: implementation_documentation_gap_analysis.md  vidst_architecture_and_codebase_analysis.md  vidst_system_architecture.md
refactor/02_planning/: vidst_architecture_transition.md  vidst_implementation_timeline.md  vidst_minimum_viable_components.md  vidst_refactoring_master_plan.md  vidst_scope_realignment_plan.md
refactor/03_implementation_guides/: vidst_api_integration_strategy.md  vidst_file_structure_implementation_guide.md  vidst_twelve_labs_integration_strategy.md  vidst_vector_db_api_integration.md
scripts/: check_pr.sh  fix_double_imports.py  fix_imports.py  fix_rst_hierarchy.py  perplexity-mcp.sh  setup_dev.sh  test_requirements.sh  validate_docs.py
src/: README.md  __init__.py
tests/: README.md  README.rst  README.rst.bak  conftest.py  test_api_integrations.py  test_automation.py  test_project_board_updater.py  test_upload.py
(+658 files in other folders)
