[metadata]
name = video-understanding-ai
version = 0.1.0
description = AI-powered video understanding and analysis system
author = Your Organization
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.10
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True

[options.packages.find]
where = src
exclude =
    tests*
    docs*

[options.package_data]
* = *.txt, *.md, *.json

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -v
    --cov=src
    --cov-report=html
    --cov-report=xml
    --cov-report=term-missing:skip-covered

[coverage:run]
source = src
branch = True
omit =
    tests/*
    */__init__.py
    */conftest.py
    # Exclude old code paths
    src/video_understanding/**
    video_understanding/**

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if TYPE_CHECKING:
    pass
fail_under = 85

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    # Exclude old code paths
    src/video_understanding/**,
    video_understanding/**
per-file-ignores =
    tests/*: D,S

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
ignore_missing_imports = True

[mypy-tests.*]
disallow_untyped_defs = False
disallow_incomplete_defs = False
